--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -57,7 +57,7 @@ html[dir='ltr'] {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background: linear-gradient(120deg, #0f0f0f, #1c1c1c);
+	background: linear-gradient(120deg, #efefef, #c8c8c8);
 	background-attachment: fixed;
 	overflow: hidden;
 	position: relative;
@@ -70,7 +70,7 @@ html[dir='ltr'] {
 		height: 400px;
 		top: -100px;
 		left: -100px;
-		background: radial-gradient(circle, rgba(255, 255, 255, 0.15), transparent 70%);
+		background: radial-gradient(circle, rgba(0, 0, 0, 0.15), transparent 70%);
 		filter: blur(100px);
 		animation: moveGlow 10s infinite alternate;
 	}
@@ -94,10 +94,10 @@ html[dir='ltr'] {
 	gap: 2rem;
 	align-items: center;
 	backdrop-filter: blur(25px);
-	background: rgba(255, 255, 255, 0.05);
-	border: 1px solid rgba(255, 255, 255, 0.15);
+	background: rgba(255, 255, 255, 0.08) !important;
+	border: 1px solid rgba(255, 255, 255, 0.15) !important;
+	box-shadow: 0 10px 30px rgba(255, 255, 255, 0.7) !important;
 	border-radius: 2rem;
-	box-shadow: 0 15px 60px rgba(0, 0, 0, 0.6);
 	position: relative;
 	overflow: hidden;
 	padding: 3rem;
@@ -112,9 +112,9 @@ html[dir='ltr'] {
 		height: 140%;
 		background: conic-gradient(
 				from 180deg at 50% 50%,
-				rgba(255, 255, 255, 0.1),
+				rgba(0, 0, 0, 0.1),
 				transparent,
-				rgba(255, 255, 255, 0.1)
+				rgba(0, 0, 0, 0.1)
 		);
 		transform: rotate(25deg);
 		z-index: 0;
@@ -141,7 +141,7 @@ html[dir='ltr'] {
 		font-size: 3rem;
 		font-weight: 700;
 		margin-bottom: 1rem;
-		background: linear-gradient(to right, #ffffff, #cccccc);
+		background: linear-gradient(to right, #000, #555);
 		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent;
 	}
@@ -149,7 +149,9 @@ html[dir='ltr'] {
 	p {
 		font-size: 1.3rem;
 		line-height: 1.8;
-		color: rgba(255, 255, 255, 0.8);
+		background: linear-gradient(to top, #000, #555);
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
 	}
 }
 
@@ -168,14 +170,29 @@ html[dir='ltr'] {
 
 		i {
 			font-size: 2.5rem;
-			color: #fff;
+			background: conic-gradient(
+					from 180deg at 50% 50%,
+					rgba(0, 0, 0, 0.1),
+					transparent,
+					rgba(0, 0, 0, 0.1)
+			۰);
 			margin-bottom: 0.5rem;
 		}
 
 		h2 {
-			color: #fff;
-			font-weight: 600;
+			background: linear-gradient(to right, #000, #222);
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
+			font-weight: 900;
 			font-size: 1.8rem;
+		}
+
+		h3 {
+			background: linear-gradient(to right, #000, #222);
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
+			font-weight: 400;
+			font-size: 1rem;
 		}
 	}
 
