--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,11 +1,11 @@
 <h3 class="text-center mb-3">Login</h3>
 <form>
 	<div class="p-fluid">
-		<p-float-label variant="on" class="mt-3">
+		<p-float-label variant="in" class="mt-3">
 			<label for="username">Username</label>
 			<input pInputText id="username"/>
 		</p-float-label>
-		<p-float-label variant="on" class="mt-3">
+		<p-float-label variant="in" class="mt-3">
 			<label for="password">Password</label>
 			<input pPassword id="password" toggleMask="true"/>
 		</p-float-label>
