--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,15 +1,15 @@
 <h3 class="text-center mb-3">Register</h3>
 <form>
 	<div class="p-fluid">
-		<p-float-label variant="on" class="mt-3">
+		<p-float-label variant="in" class="mt-3">
 			<label>Email</label>
 			<input pInputText type="email"/>
 		</p-float-label>
-		<p-float-label variant="on" class="mt-3">
+		<p-float-label variant="in" class="mt-3">
 			<label>Username</label>
 			<input pInputText/>
 		</p-float-label>
-		<p-float-label variant="on" class="mt-3">
+		<p-float-label variant="in" class="mt-3">
 			<label>Password</label>
 			<input pInputText type="password"/>
 		</p-float-label>
