Initialize Panel Datakhana

--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -175,7 +175,7 @@ html[dir='ltr'] {
 					rgba(0, 0, 0, 0.1),
 					transparent,
 					rgba(0, 0, 0, 0.1)
-			۰);
+			);
 			margin-bottom: 0.5rem;
 		}
 
