Initialize Panel Datakhana

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main>
 	<div class="dashboard-ux" dir="rtl">
-		<div class="router-container" [@routeFade]="getState(routerOutlet)">
+		<div class="router-container">
 			<router-outlet #routerOutlet="outlet"></router-outlet>
 		</div>
 	</div>
