--- a/src/app/shared-header/shared-header.component.html
+++ b/src/app/shared-header/shared-header.component.html
@@ -13,7 +13,7 @@
 		<!-- لوگو + نام محصول -->
 		<ng-template pTemplate="start">
 			<a class="brand d-flex align-items-center gap-2" href="#">
-				<img src="assets/logo.svg" alt="logo" class="brand-logo" />
+				<img src="assets/logo.webp" alt="logo" class="brand-logo" />
 				<span class="brand-name">Social Analytics</span>
 				<p-badge value="Pro"></p-badge>
 			</a>
