--- a/src/app/shell/shell-header/shell-header.component.html
+++ b/src/app/shell/shell-header/shell-header.component.html
@@ -6,7 +6,7 @@
 			           [style]="{'--p-menubar-background':'transparent','--p-menubar-border-color':'transparent'}">
 				<ng-template pTemplate="start">
 					<a class="brand" href="#">
-						<img src="/assets/logo.svg" class="brand__logo" alt="logo">
+						<img src="/assets/logo.webp" class="brand__logo" alt="logo">
 						<span class="brand__name">Social Analytics</span>
 					</a>
 				</ng-template>
